Add Code Words section to sidebar
Add quick search links for potential code words at top of sidebar:
pizza, cookie, hotdog, pasta, ice cream, walnut, map

--- a/index.html
+++ b/index.html
@@ -1112,6 +1112,18 @@
 
     <div class="main-container">
         <aside class="sidebar" id="sidebar">
+            <div class="sidebar-section" style="background:var(--bg-tertiary);border-radius:6px;padding:0.5rem;margin-bottom:0.5rem">
+                <div class="sidebar-title" style="color:var(--accent)">Code Words?</div>
+                <div class="suggestion-tags">
+                    <span class="tag" data-search="pizza">pizza</span>
+                    <span class="tag" data-search="cookie">cookie</span>
+                    <span class="tag" data-search="hotdog">hotdog</span>
+                    <span class="tag" data-search="pasta">pasta</span>
+                    <span class="tag" data-search="ice cream">ice cream</span>
+                    <span class="tag" data-search="walnut">walnut</span>
+                    <span class="tag" data-search="map">map</span>
+                </div>
+            </div>
             <div class="sidebar-section">
                 <div class="sidebar-title">Singapore Links</div>
                 <div class="suggestion-tags">
