Replace hotdog with eggplant in Code Words

--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
                 <div class="suggestion-tags">
                     <span class="tag" data-search="pizza">pizza</span>
                     <span class="tag" data-search="cookie">cookie</span>
-                    <span class="tag" data-search="hotdog">hotdog</span>
+                    <span class="tag" data-search="eggplant">eggplant</span>
                     <span class="tag" data-search="pasta">pasta</span>
                     <span class="tag" data-search="ice cream">ice cream</span>
                     <span class="tag" data-search="walnut">walnut</span>
