Add island and spa to Activities section

--- a/index.html
+++ b/index.html
@@ -1194,6 +1194,8 @@
                 <div class="sidebar-title">Activities</div>
                 <div class="suggestion-tags">
                     <span class="tag" data-search="massage">Massage</span>
+                    <span class="tag" data-search="spa">Spa</span>
+                    <span class="tag" data-search="island">Island</span>
                     <span class="tag" data-search="dinner">Dinner</span>
                     <span class="tag" data-search="party">Party</span>
                     <span class="tag" data-search="meeting">Meeting</span>
